fix(AttachmentPreview): fix "jumpy" icon change

--- a/src/v2/styles/AttachmentPreviewList/AttachmentPreviewList-layout.scss
+++ b/src/v2/styles/AttachmentPreviewList/AttachmentPreviewList-layout.scss
@@ -44,18 +44,21 @@
   }
 
   .str-chat__attachment-preview-file {
-    @include utils.flex-row-center;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+
     height: $preview-height;
     width: calc(var(--str-chat__spacing-px) * 200);
     position: relative;
-    padding: var(--str-chat__spacing-4);
+    padding: 0 var(--str-chat__spacing-4);
     column-gap: var(--str-chat__spacing-2);
 
     .str-chat__attachment-preview-file-icon {
       @include utils.flex-row-center;
 
       svg {
-        height: calc(var(--str-chat__spacing-px) * 38);
+        height: calc(var(--str-chat__spacing-px) * 37);
         width: unset;
       }
     }
@@ -73,7 +76,7 @@
       }
 
       .str-chat__attachment-preview-file-download {
-        line-height: calc(var(--str-chat__spacing-px) * 16);
+        line-height: calc(var(--str-chat__spacing-px) * 13);
 
         svg {
           width: calc(var(--str-chat__spacing-px) * 16);
